--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GEMINI_API_KEY="AIzaSyB5Z-BtaOyvYREiuBjy-GDhHgRJZvjZ2ag"
-DB_USERNAME="root"
-DB_PASSWORD="new_password"
+DB_USERNAME="godb"
+DB_PASSWORD="godb_1212"
